--- a/index.html
+++ b/index.html
@@ -2,21 +2,96 @@
 <html>
 <head>
     <title>PORTFOLIO WEB</title>
+    <link rel="stylesheet" href="style.css"/> 
+    
 </head>  
 <body>
 <header>
-    <h1>Melany Arguello</h1> 
-    <h2>Estudiante CEDUC</h2>  
+    <nav> 
+        <ul>
+            <a href="#Acerca de mi">Acerca de mi</a>
+            <a href="Habilidades">Habilidades</a>
+            <a href="Experiencia">Experiencia</a>
+            <a href="Lista de Proyectos">Lista de Proyectos</a>
+            <a href="Información de Contacto">Información de Contacto</a>
+        </ul>
+    </nav>
+    <h1>Melany Argüello</h1> 
+    <h2>Estudiante</h2>  
 </header>
 <main> 
-    <section>
-        <h2> Acerca de mi</h2>
+    <section id="Acerca de mi">
+        <h2>Acerca de mi</h2>
         <p>
-            Soy estudiante del 5to curso de licenciatura en Ciencias de la Educación, tengo 22 años, soy de la ciudad de María Auxiliadora Itapúa, estoy iniciando en el mundo de la programación para enriquecer mi conocimiento y abrir fronteras para aprovechar oportunidades gracias a la tecnología.
+            Estudiante del 5to curso de licenciatura en Ciencias de la Educación, tengo 22 años, soy de la ciudad de María Auxiliadora Itapúa, estoy iniciando en el mundo de la programación para enriquecer mi conocimiento y abrir fronteras para aprovechar oportunidades gracias a la tecnología.
         </p> 
     </section>
+    <section id="Habilidades">
+        <h2> Habilidades</h2>
+        <ul>
+             <li>Informática/Ofimática</li>
+             <b>Básico</b>
+        </ul>
+        <ul>
+            <li>HTML</li>
+            <b>Principiante</b>
+        </ul>
+        <ul>
+            <li>CSS</li>
+            <b>Principiante</b>
+        </ul>
+        <ul>
+            <li>JavaScript</li>
+            <b>Principiante</b>
+        </ul>
+        <ul>
+            <li>Lectoescritura Español,Guaraní,Portugués</li>
+            <b>Básico/Avanzado</b>
+        </ul>
+        <ul>
+            <li>Lectoescritura Inglés</li>
+            <b>Básico</b>
+        </ul>
+    </section>
+    <section id="Experiencia">
+      <h2> Experiencia </h2>
+     <ul>
+        <li>Bodega/Autoservicio</li>
+        <b> Atencíon al cliente (1 año) </b>
+     </ul> 
+     <ul> 
+        <li>Estudio Contable</li>
+        <b>Secretaría Administrativa (2 años)</b>
+     </ul>
+     <ul>
+        <li>Instituto Nacional de Estadística</li>
+        <b> Supervisión Cartográfica (6 meses)</b>
+     </ul>
+     <ul>
+        <li> Justicia Electoral</li>
+        <b> Auxiliar Administrativo (1 año 6 meses)</b>
+     </ul> 
+    </section>
+    <section id="Lista de Proyectos"> 
+        <h2> Lista de Proyectos</h2>
+        <ul> 
+            <li> Mi Portfolio Web </li>
+            <a href="https://mailchimp.com/es/resources/web-developer-portfolio-examples/">Ejemplo</a>
+        </ul>
+    </section>
+    <section id="Información de Contacto">
+        <h2> Información de contacto </h2>
+        <ul> 
+            <h2> CONTACTO</h2>
+            <li> Email: melanyarguellogonzalez1@gmail.com</li>
+            <li> Teléfono: (0976) 401 - 154 </li>
+
+            <h2> REDES SOCIALES</h2>
+            <li> Facebook: <a href="https://www.facebook.com/melany.arguello.315?mibextid=kFxxJD"> Melany Argüello - Ir</a></li>
+
+            <li> Instagram: <a href="https://www.instagram.com/mellargu?igsh=aTFwNWQzc2owbDQ2&utm_source=qr"> mellargu - Ir</a> </li>
+        </ul>
+    </section>
 </main>
-
-
 </body>
 </html>
