--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
         </ul>
     </nav>
     <h1>Melany Argüello</h1> 
-    <h2>Estudiante</h2>  
+    <h2>Estudiante</h2>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Pacifico&family=Playwrite+AU+VIC:wght@100..400&family=Playwrite+US+Trad:wght@100..400&display=swap');
+        </style>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Pacifico&family=Playwrite+AU+VIC:wght@100..400&family=Playwrite+US+Trad:wght@100..400&display=swap');
+            </style>
 </header>
 <main> 
     <section id="Acerca de mi">
