--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>PORTFOLIO WEB</title>
     <link rel="stylesheet" href="style.css"/> 
     
-</head>  
+</head> 
+<script src="script.js" defer></script>
 <body>
 <header>
     <nav> 
@@ -21,9 +22,9 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Pacifico&family=Playwrite+AU+VIC:wght@100..400&family=Playwrite+US+Trad:wght@100..400&display=swap');
         </style>
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Pacifico&family=Playwrite+AU+VIC:wght@100..400&family=Playwrite+US+Trad:wght@100..400&display=swap');
-            </style>
+            <style>
+                @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
+                </style>
 </header>
 <main> 
     <section id="Acerca de mi">
@@ -35,28 +36,29 @@
     <section id="Habilidades">
         <h2> Habilidades</h2>
         <ul>
-             <li>Informática/Ofimática</li>
+            <nav> 
+                <ul>
+                    <a href="Informática/Ofimática"></a>
+                    <a href="HTML"></a>
+                    <a href="CSS"></a>
+                    <a href="JavaScript"></a>
+                </ul>
+            </nav>
+             <li id="Informática/Ofimática">Informática/Ofimática</li>
              <b>Básico</b>
         </ul>
         <ul>
-            <li>HTML</li>
+            <li id="HTML">HTML</li>
             <b>Principiante</b>
         </ul>
         <ul>
-            <li>CSS</li>
+            <li id="CSS">CSS</li>
             <b>Principiante</b>
         </ul>
         <ul>
-            <li>JavaScript</li>
+            <li id="JavaScript">JavaScript</li>
             <b>Principiante</b>
         </ul>
-        <ul>
-            <li>Lectoescritura Español,Guaraní,Portugués</li>
-            <b>Básico/Avanzado</b>
-        </ul>
-        <ul>
-            <li>Lectoescritura Inglés</li>
-            <b>Básico</b>
         </ul>
     </section>
     <section id="Experiencia">
@@ -94,10 +96,11 @@
 
             <h2> REDES SOCIALES</h2>
             <li> Facebook: <a href="https://www.facebook.com/melany.arguello.315?mibextid=kFxxJD"> Melany Argüello - Ir</a></li>
-
             <li> Instagram: <a href="https://www.instagram.com/mellargu?igsh=aTFwNWQzc2owbDQ2&utm_source=qr"> mellargu - Ir</a> </li>
         </ul>
     </section>
 </main>
 </body>
+<footer> 
+</footer>
 </html>
